[package]
name = "nostrust"
version = "0.1.0"
edition = "2021"
authors = ["Komron Aripov", "Prithvi Oak"]
keywords = ["nostr", "rust", "sgx", "enclave"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
httparse = "1.9.5"
chrono = "0.4.38"
secp256k1 = "0.30.0"
rand = "0.8.5"

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "relay"
path = "src/relay/main.rs"
